[package]
name = "rust-web-development"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.116"
axum = "0.7.5"
